k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    name: analytics
    app: shadower-analytics
